[package]
name = "microsoft-todo-export"
version = "0.1.0"
authors = ["Marcus Ball <marcus.ball@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
derive_more = "0.99.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"